--- a/OnlineExamService/OnlineExamService.csproj
+++ b/OnlineExamService/OnlineExamService.csproj
@@ -154,6 +154,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\McqAnswersController.cs" />
+    <Compile Include="Controllers\McqAnswersMVCController.cs" />
     <Compile Include="Controllers\McqExamsController.cs" />
     <Compile Include="Controllers\McqExamsMVCController.cs" />
     <Compile Include="Controllers\McqQuestionsController.cs" />
@@ -163,17 +165,17 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201601060652202_initial.cs" />
-    <Compile Include="Migrations\201601060652202_initial.Designer.cs">
-      <DependentUpon>201601060652202_initial.cs</DependentUpon>
+    <Compile Include="Migrations\201601061038568_initial.cs" />
+    <Compile Include="Migrations\201601061038568_initial.Designer.cs">
+      <DependentUpon>201601061038568_initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201601060944402_AnswerAndResultAdded.cs" />
-    <Compile Include="Migrations\201601060944402_AnswerAndResultAdded.Designer.cs">
-      <DependentUpon>201601060944402_AnswerAndResultAdded.cs</DependentUpon>
+    <Compile Include="Migrations\201601061204387_dbcontextupdated.cs" />
+    <Compile Include="Migrations\201601061204387_dbcontextupdated.Designer.cs">
+      <DependentUpon>201601061204387_dbcontextupdated.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201601061018515_virtualDiscardedFromString.cs" />
-    <Compile Include="Migrations\201601061018515_virtualDiscardedFromString.Designer.cs">
-      <DependentUpon>201601061018515_virtualDiscardedFromString.cs</DependentUpon>
+    <Compile Include="Migrations\201601070547164_AnswerAsString.cs" />
+    <Compile Include="Migrations\201601070547164_AnswerAsString.Designer.cs">
+      <DependentUpon>201601070547164_AnswerAsString.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Exam.cs" />
@@ -245,6 +247,12 @@
     <Content Include="Views\McqQuestionsMVC\Details.cshtml" />
     <Content Include="Views\McqQuestionsMVC\Edit.cshtml" />
     <Content Include="Views\McqQuestionsMVC\Index.cshtml" />
+    <Content Include="Views\McqExamsMVC\GiveExam.cshtml" />
+    <Content Include="Views\McqAnswersMVC\Create.cshtml" />
+    <Content Include="Views\McqAnswersMVC\Delete.cshtml" />
+    <Content Include="Views\McqAnswersMVC\Details.cshtml" />
+    <Content Include="Views\McqAnswersMVC\Edit.cshtml" />
+    <Content Include="Views\McqAnswersMVC\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -254,14 +262,14 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201601060652202_initial.resx">
-      <DependentUpon>201601060652202_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201601061038568_initial.resx">
+      <DependentUpon>201601061038568_initial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201601060944402_AnswerAndResultAdded.resx">
-      <DependentUpon>201601060944402_AnswerAndResultAdded.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201601061204387_dbcontextupdated.resx">
+      <DependentUpon>201601061204387_dbcontextupdated.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201601061018515_virtualDiscardedFromString.resx">
-      <DependentUpon>201601061018515_virtualDiscardedFromString.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201601070547164_AnswerAsString.resx">
+      <DependentUpon>201601070547164_AnswerAsString.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
